--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-.settings/org.eclipse.jdt.core.prefs
-.vscode/launch.json
-.settings/org.eclipse.core.resources.prefs
-.project
+out
 .classpath
+.project
+.settings
+.metadata
+*.log
+*.zip
+*.class
+*.swp
+target
+classes
+build
+bin
+classes
+*~
+.vscode/launch.json
