--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,27 @@
-out
-.classpath
-.project
-.settings
-.metadata
-*.log
-*.zip
+# Compiled class file
 *.class
-*.swp
-target
-classes
-build
-bin
-classes
-*~
-.vscode/launch.json
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+.settings
+.gitignore
+.vscode
